@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<caching-policies>
+<!-- TODO:  add some sensible defaults -->
+</caching-policies>
