@@ -5,6 +5,8 @@
            class="Products.MailHost.MailHost.MailHost"/>
  <required tool_id="cookie_authentication"
            class="Products.CMFCore.CookieCrumbler.CookieCrumbler"/>
+ <required tool_id="caching_policy_manager"
+           class="Products.CMFCore.CachingPolicyManager.CachingPolicyManager"/>
  <required tool_id="portal_actions"
            class="Products.CMFCore.ActionsTool.ActionsTool"/>
  <required tool_id="portal_catalog"
